# nenos_python_project

./: .gitignore  pylintrc  pyproject.toml
src/: config.py  init_db.py
src/api/: main.py
src/api/routers/: status.py  users.py
src/common/data_transfer_objects/: api_status.py  users.py
src/db/queies/: users.py
src/db/queries/: users.py
src/db/sql/: connection.py  init_db.py
src/db/sql/models/: __init__.py  base.py  product.py  report.py  transaction.py  user.py
src/web/: main.py  main1.py
src/web/assets/: styles.css
src/web/callbacks/: __init__.py  add_user.py  api_status.py  delete_user.py  get_user.py  update_user.py
src/web/components/: add_user.py  delete_user.py  error_card.py  get_user.py  update_user.py  updated_user_card.py  user_card.py  user_input.py
