[tool.poetry]
name = "nenos-python-project"
version = "0.1.0"
description = ""
authors = ["divilecatalin <divilec@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
pytest = "^8.3.3"
pylint = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
